--- a/chill-spots.html
+++ b/chill-spots.html
@@ -5,9 +5,13 @@
   <title>Chill Spots</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explore peaceful chill spots in Rotterdam for relaxation and a break from city life. Find directions and learn more about each spot's unique charm.">
+  <meta name="keywords"
+    content="Chill spots, Rotterdam, relaxation, nature, peaceful, Kralingse Bos, Jan Evertsenplaats, Joost Banckertsplaats, Schouwburgplein">
   <meta name="author" content="Leandro A Nuñez B">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
+  <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/chill-spots.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
@@ -16,29 +20,18 @@
 
 <body>
   <main>
-    <section class="hero-section">
-      <h2 class="visually-hidden">Hero Section</h2>
-      <!-- Visually hidden heading for accessibility -->
+    <header class="hero-section">
       <section class="hero-content">
-        <!-- Navigation -->
+        <h2 class="visually-hidden">.</h2>
         <nav class="main-navigation">
-          <!-- Logo container updated to header for semantic clarity -->
-          <header class="brand-logo">
+          <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo">
             </a>
-          </header>
-
-          <!-- Hidden checkbox for toggling the menu -->
+          </figure>
           <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
-
-          <!-- Label for the menu button (Hamburger Menu) -->
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon">
-            <i class="fa fa-bars"></i>
-          </label>
-
-          <!-- Navigation links -->
+          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -52,71 +45,57 @@
           </aside>
         </nav>
 
-        <!-- Hero Message Container -->
-        <section class="hero-message-container">
-          <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
-        </section>
+
+        <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
+
       </section>
-    </section>
+    </header>
   </main>
+
   <section class="section-4">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-4">
+      <h2 class="visually-hidden">.</h2>
       <article>
-        <h2>
-          Looking for a relaxed spot in Rotterdam? You are in the right place!
-        </h2>
+        <h2>Looking for a relaxed spot in Rotterdam? You are in the right place!</h2>
         <h3>Here are four unique chill spots in Rotterdam</h3>
         <p>
-          These four locations provide a peaceful escape from the hustle and
-          bustle of the city. Whether you're looking to unwind, recharge, or
-          simply disconnect from media and the digital world, these serene
-          locations provide the perfect environment for relaxation and
-          reflection.
-        </p>
-        <p>
-          <strong><em>Why is it important to take a break in nature?</em></strong>
-        </p>
-        <p>
-          Stepping away from our busy routines and spending time in natural
-          environments helps reduce stress, clear the mind, and improve
-          overall well-being. Nature’s calming effect, with its fresh air,
-          soothing sounds, and open spaces, promotes relaxation and mental
-          clarity, allowing us to recharge and return with better focus and
-          creativity. In addition, taking breaks in nature boosts mood and
-          energy levels by encouraging physical movement and a connection to
-          the outdoors. This not only benefits our mental health but also
-          enhances our physical vitality, making it easier to tackle daily
-          challenges with renewed energy and a fresh perspective.
+          These four locations provide a peaceful escape from the hustle and bustle of the city. Whether you're looking
+          to unwind, recharge, or simply disconnect from media and the digital world, these serene locations provide the
+          perfect environment for relaxation and reflection.
         </p>
       </article>
     </section>
   </section>
 
   <section class="image-blocks">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-blocks white-background">
+      <h2 class="visually-hidden">.</h2>
       <section class="image-block-1">
-        <img src="img/connect-nature.webp" alt="" class="image-block" />
+        <h2 class="visually-hidden">.</h2>
+        <img src="img/connect-nature.webp" alt="Image of Kralingse Bos park in Rotterdam"
+          title="Kralingse Bos - Park in Rotterdam" class="image-block">
         <article>
           <h3>Kralingse Bos</h3>
           <p>
-            A tranquil, expansive park featuring a beautiful lake, perfect for
-            a calming walk or a quiet moment by the water. You can also enjoy
-            the scenic views and nature trails that will help you clear your
-            mind.
+            A tranquil, expansive park featuring a beautiful lake, perfect for a calming walk or a quiet moment by the
+            water.
+            Enjoy scenic views and nature trails to help you clear your mind.
           </p>
         </article>
         <a href="#" class="general-button">Directions (Google Map)</a>
       </section>
 
       <section class="image-block-2">
-        <img src="img/wellbeing-tips-header.webp" alt="" class="image-block" />
+        <h2 class="visually-hidden">.</h2>
+        <img src="img/wellbeing-tips-header.webp" alt="Jan Evertsenplaats in the heart of Rotterdam"
+          title="Jan Evertsenplaats - Quiet park in Rotterdam" class="image-block">
         <article>
           <h3>Jan Evertsenplaats</h3>
           <p>
-            A peaceful park in the heart of Rotterdam Centrum, surrounded by
-            buildings yet calm and tranquil. Perfect for relaxing, reading, or
-            simply unwinding in a serene environment, offering a quiet escape
-            from the bustling city.
+            A peaceful park in Rotterdam Centrum, surrounded by buildings yet calm and tranquil. Perfect for relaxing,
+            reading, or simply unwinding.
           </p>
         </article>
         <a href="#" class="general-button">Directions (Google Map)</a>
@@ -125,9 +104,13 @@
   </section>
 
   <section class="image-blocks">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-blocks">
+      <h2 class="visually-hidden">.</h2>
       <section class="image-block-1">
-        <img src="img/listening-to-music.webp" alt="" class="image-block" />
+        <h2 class="visually-hidden">.</h2>
+        <img src="img/Joost.webp" alt="Quiet green space at Joost Banckertsplaats in Rotterdam"
+          title="Joost Banckertsplaats - Relaxing green area in Rotterdam" class="image-block">
         <article>
           <h3>Joost Banckertsplaats</h3>
           <p>
@@ -141,7 +124,9 @@
       </section>
 
       <section class="image-block-2">
-        <img src="img/healthy-snack.webp" alt="" class="image-block" />
+        <h2 class="visually-hidden">.</h2>
+        <img src="img/Scchowburgplein.webp" alt="Schouwburgplein square in Rotterdam with modern design"
+          title="Schouwburgplein - Urban square in Rotterdam" class="image-block">
         <article>
           <h3>Schouwburgplein</h3>
           <p>
@@ -156,31 +141,25 @@
     </section>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p>
-        <strong><em>Quick Breaks:</em></strong>
-      </p>
+      <p><strong><em>Quick Breaks:</em></strong></p>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
-        <li>
-          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-        </li>
-        <li>
-          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-        </li>
-        <li>
-          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-        </li>
-        <li>
-          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
-        </li>
+        <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+        <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+        <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
         <li><a href="contact.html" class="navbar-link">Contact</a></li>
       </ul>
     </nav>
     <section class="copyright">
+      <h2 class="visually-hidden">.</h2>
       <figure class="footer-logo">
-        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+          title="Work Balance logo in footer">
+        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
