--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
+  <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
   <meta name="description"
@@ -17,30 +17,21 @@
 </head>
 
 <body>
+
   <!-- HERO SECTION -->
   <main>
-    <section class="hero-section">
-      <h2 class="visually-hidden">Hero Section</h2>
+    <header class="hero-section">
       <section class="hero-content">
-        <!-- Navigation -->
+        <h2 class="visually-hidden">Hello</h2>
         <nav class="main-navigation">
-          <!-- Logo container updated to header for semantic clarity -->
-          <header class="brand-logo">
+          <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo">
             </a>
-          </header>
-
-          <!-- Hidden checkbox for toggling the menu -->
+          </figure>
           <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
-
-          <!-- Label for the menu button (Hamburger Menu) -->
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon">
-            <i class="fa fa-bars"></i>
-          </label>
-
-          <!-- Navigation links -->
+          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -53,25 +44,16 @@
             <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
-
-
-        <!-- Hero Message Container -->
-        <section class="hero-message-container">
-          <h1 class="hero-heading">Welcome to Work Balance</h1>
-          <p class="hero-description">
-            Your one-stop solution for remote work wellness and work-life balance.
-          </p>
-          <section class="hero-buttons">
-            <a href="wellbeing-tips.html" class="hero-button">Mental health resources</a>
-            <a href="contact.html" class="hero-button">Contact us</a>
-          </section>
-        </section>
+        <h1 class="hero-heading">Welcome to Work Balance!</h1>
       </section>
-    </section>
+    </header>
   </main>
 
+  <!-- INTRODUCTION SECTION -->
   <section class="introduction">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-introduction">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>Supporting Your Journey to Remote Work Success</h2>
         <p>
@@ -94,8 +76,11 @@
     </section>
   </section>
 
+  <!-- SEMI-CTA SECTION -->
   <section class="section-3">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-3">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>Find the Help You Need for a Better Work-Life Balance</h2>
         <p>
@@ -105,6 +90,7 @@
         </p>
       </article>
       <section class="general-buttons">
+        <h2 class="visually-hidden">.</h2>
         <a href="wellbeing-tips.html" class="general-button">Wellbeing Tips</a>
         <a href="quick-breaks.html" class="general-button">Quick breaks ideas</a>
         <a href="chill-spots.html" class="general-button">Chill Spots</a>
@@ -112,8 +98,11 @@
     </section>
   </section>
 
+  <!-- SEMI-CTA SECTION -->
   <section class="section-4">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-4">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>Your Guide to Remote Work Wellness</h2>
         <p>
@@ -127,8 +116,11 @@
     </section>
   </section>
 
+  <!-- FOR WHOM IS THIS WEBSITE SECTION -->
   <section class="split-in-2 reverse white-bg">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
         <img src="img/girl-using-computer.webp" alt="Girl using computer" title="Girl using computer for remote work">
         <figcaption>
@@ -162,8 +154,11 @@
     </section>
   </section>
 
+  <!-- KEY FEATURE SECTION -->
   <section class="split-in-2">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
         <img src="img/playing-games.webp" alt="playing table game">
       </figure>
@@ -189,8 +184,11 @@
     </section>
   </section>
 
+  <!-- CALL TO ACTION SECTION -->
   <section class="CTA">
+    <h2 class="visually-hidden">.</h2>
     <section class="CTA-picture">
+      <h2 class="visually-hidden">.</h2>
       <article class="CTA-text-box">
         <h2>
           Are you ready to change the way you live? Start exploring our
@@ -212,31 +210,25 @@
     </section>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p>
-        <strong><em>Quick Breaks:</em></strong>
-      </p>
+      <p><strong><em>Quick Breaks:</em></strong></p>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
-        <li>
-          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-        </li>
-        <li>
-          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-        </li>
-        <li>
-          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-        </li>
-        <li>
-          <a href="workspace-tips.html" class="navbar-link">Workspace Tips</a>
-        </li>
+        <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+        <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+        <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
         <li><a href="contact.html" class="navbar-link">Contact</a></li>
       </ul>
     </nav>
     <section class="copyright">
+      <h2 class="visually-hidden">.</h2>
       <figure class="footer-logo">
-        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer">
+        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+          title="Work Balance logo in footer">
+        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
