--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
-  <title>Quick Breaks</title>
+  <title>Quick Breaks - Refresh Your Mind and Body</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Leandro A Nuñez B">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
+  <meta name="description"
+    content="Discover quick break ideas to refresh your mind and body during work. Tips on connecting with nature, listening to music, and staying hydrated.">
+  <meta name="keywords"
+    content="quick breaks, work wellness, mental refresh, connect with nature, music, hydration, work-life balance, productivity tips, relaxation activities">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/quick-breaks.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
@@ -15,29 +19,18 @@
 
 <body>
   <main>
-    <section class="hero-section">
-      <h2 class="visually-hidden">Hero Section</h2>
-      <!-- Visually hidden heading for accessibility -->
+    <header class="hero-section">
       <section class="hero-content">
-        <!-- Navigation -->
+        <h2 class="visually-hidden">.</h2>
         <nav class="main-navigation">
-          <!-- Logo container updated to header for semantic clarity -->
-          <header class="brand-logo">
+          <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo">
             </a>
-          </header>
-
-          <!-- Hidden checkbox for toggling the menu -->
+          </figure>
           <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
-
-          <!-- Label for the menu button (Hamburger Menu) -->
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon">
-            <i class="fa fa-bars"></i>
-          </label>
-
-          <!-- Navigation links -->
+          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -50,121 +43,112 @@
             <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
-
-        <!-- Hero Message Container -->
-        <section class="hero-message-container">
-          <h1 class="hero-heading">Quick Breaks</h1>
-        </section>
+        <h1 class="hero-heading">Quick Breaks</h1>
       </section>
-    </section>
+    </header>
   </main>
+
+  <!-- NEED A BREAK SECTION -->
   <section class="section-4">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-4">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>Need a break?</h2>
-        <h3>
-          Here are some quick activities to refresh your mind and body during
-          your workday.
-        </h3>
+        <h3>Here are some quick activities to refresh your mind and body during your workday.</h3>
         <p>
-          The Well being tips page emphasizes the importance of taking regular
-          breaks. Here's why it's essential: Pausing throughout your workday
-          boosts both productivity and well-being, especially for remote
-          workers who tend to sit for long periods. Even a brief break helps
-          refresh your mind, reducing mental exhaustion and enhancing
-          concentration. For more tips, click More Well-being tips.
+          The Wellbeing Tips page emphasizes the importance of taking regular breaks. Pausing throughout your workday
+          boosts both productivity and well-being, especially for remote workers who tend to sit for long periods. Even
+          a brief break helps refresh your mind, reducing mental exhaustion and enhancing concentration.
         </p>
       </article>
     </section>
   </section>
 
+  <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-blocks white-background">
-      <section class="image-block-1">
-        <img src="img/connect-with-nature.webp" alt="" class="image-block" />
+      <h2 class="visually-hidden">.</h2>
+      <figure class="image-block-1">
+        <img src="img/connect-with-nature.webp" alt="Nature scene for relaxation"
+          title="Connect with Nature - Relaxing activity" class="image-block">
         <article>
           <h3>Go out and connect with nature</h3>
           <p>
-            Spending time in nature helps you disconnect from work, relax both
-            your mind and body, and boost your overall happiness. Not only
-            does it improve your mood, but connecting with nature also gives
-            your eyes a much-needed break after spending long hours in front
-            of a screen. Learn about the best chill spots in
-            Rotterdam: Rotterdam chill spots.
+            Spending time in nature helps you disconnect from work, relax both your mind and body, and boost your
+            overall happiness. Connecting with nature also gives your eyes a much-needed break after spending long hours
+            in front of a screen. Learn about the best chill spots in Rotterdam.
           </p>
         </article>
-      </section>
+      </figure>
 
-      <section class="image-block-2">
-        <img src="img/taking-a-jog.webp" alt="" class="image-block" />
+      <figure class="image-block-2">
+        <img src="img/taking-a-jog.webp" alt="Person jogging in park" title="Take a Walk or Jog - Quick break idea"
+          class="image-block">
         <article>
           <h3>Take a Walk or jog</h3>
           <p>
-            Step outside for a 10-minute walk or jog to get fresh air and
-            natural light. This brief break helps refresh your mind, improve
-            your mood, and give you a mental reset. Learn more about the best
-            practices for walking correctly: How to walk with good form.
+            Step outside for a 10-minute walk or jog to get fresh air and natural light. This brief break helps refresh
+            your mind, improve your mood, and give you a mental reset. Learn more about the best practices for walking
+            correctly.
           </p>
         </article>
-      </section>
+      </figure>
     </section>
   </section>
 
+  <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-blocks">
-      <section class="image-block-1">
-        <img src="img/listening-to-music.webp" alt="" class="image-block" />
+      <h2 class="visually-hidden">.</h2>
+      <figure class="image-block-1">
+        <img src="img/listening-to-music.webp" alt="Listening to music with headphones"
+          title="Listen to Music - Refreshing activity" class="image-block">
         <article>
           <h3>Listen to Music</h3>
           <p>
-            Play your favorite music or a relaxing playlist to shift your
-            mood. Whether calming or energizing, music helps reset your
-            mindset and can make your work environment more enjoyable. Learn
-            more about the best audio streaming services: streaming services.
+            Play your favorite music or a relaxing playlist to shift your mood. Whether calming or energizing, music
+            helps reset your mindset and can make your work environment more enjoyable. Learn more about the best audio
+            streaming services.
           </p>
         </article>
-      </section>
+      </figure>
 
-      <section class="image-block-2">
-        <img src="img/healthy-snack.webp" alt="" class="image-block" />
+      <figure class="image-block-2">
+        <img src="img/healthy-snack.webp" alt="Healthy snack and water" title="Hydrate and Snack - Quick refreshment"
+          class="image-block">
         <article>
           <h3>Hydrate and Snack</h3>
           <p>
-            Take a moment to drink water and enjoy a healthy snack. This quick
-            refuel keeps you hydrated and energized, helping you stay focused
-            and refreshed throughout the day. Learn more about healthy
-            snacks: Healthy snacks.
+            Take a moment to drink water and enjoy a healthy snack. This quick refuel keeps you hydrated and energized,
+            helping you stay focused and refreshed throughout the day. Learn more about healthy snacks.
           </p>
         </article>
-      </section>
+      </figure>
     </section>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p>
-        <strong><em>Quick Breaks:</em></strong>
-      </p>
+      <p><strong><em>Quick Breaks:</em></strong></p>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
-        <li>
-          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-        </li>
-        <li>
-          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-        </li>
-        <li>
-          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-        </li>
-        <li>
-          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
-        </li>
+        <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+        <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+        <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
         <li><a href="contact.html" class="navbar-link">Contact</a></li>
       </ul>
     </nav>
     <section class="copyright">
+      <h2 class="visually-hidden">.</h2>
       <figure class="footer-logo">
-        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+          title="Work Balance logo in footer">
+        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
