--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -6,39 +6,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Leandro A Nuñez B">
+  <meta name="description"
+    content="Explore practical tips for managing burnout, setting boundaries, and enhancing well-being for a balanced work-from-home life.">
+  <meta name="keywords"
+    content="well-being tips, burnout management, work-life balance, mental health, remote work, self-care, mindfulness, stress management">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
+  <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/wellbeing-tips.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
 </head>
 
 <body>
+
   <!-- HERO SECTION -->
   <main>
-    <section class="hero-section">
-      <h2 class="visually-hidden">Hero Section</h2>
-      <!-- Visually hidden heading for accessibility -->
+    <header class="hero-section">
       <section class="hero-content">
-        <!-- Navigation -->
+        <h2 class="visually-hidden">.</h2>
         <nav class="main-navigation">
-          <!-- Logo container updated to header for semantic clarity -->
-          <header class="brand-logo">
+          <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo">
             </a>
-          </header>
-
-          <!-- Hidden checkbox for toggling the menu -->
+          </figure>
           <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
-
-          <!-- Label for the menu button (Hamburger Menu) -->
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon">
-            <i class="fa fa-bars"></i>
-          </label>
-
-          <!-- Navigation links -->
+          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -51,155 +45,162 @@
             <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
-
-        <!-- Hero Message Container -->
-        <section class="hero-message-container">
-          <h1 class="hero-heading">Well-being Tips</h1>
-        </section>
+        <h1 class="hero-heading">Well-being Tips</h1>
       </section>
-    </section>
+    </header>
   </main>
+
+  <!-- WHAT IS BURNOUT? SECTION -->
   <section class="section-4">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-4">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>What is burnout?</h2>
         <h3>Understanding Burnout</h3>
         <p>
-          Burnout is a state of emotional, physical, and mental exhaustion
-          resulting from prolonged stress. Common causes include excessive
-          workloads, lack of control, insufficient rewards, work-life
-          imbalance, and toxic work environments. This leads to overwhelming
-          feelings, detachment, and reduced performance at work.
+          Burnout is a state of emotional, physical, and mental exhaustion resulting from prolonged stress. Common
+          causes include excessive workloads, lack of control, insufficient rewards, work-life imbalance, and toxic work
+          environments. This leads to overwhelming feelings, detachment, and reduced performance at work.
         </p>
         <p>
-          Ignoring burnout and continuing to push through can exacerbate the
-          situation, raising the risk of depression, heart-related issues, and
-          other health complications. Instead, it’s important to address
-          burnout early, as the longer you ignore it, the more difficult and
-          lengthy the recovery process may become. Learn more about:
-          burnout, depression, cardiovascular issues, other health problems.
+          Ignoring burnout and continuing to push through can exacerbate the situation, raising the risk of depression,
+          heart-related issues, and other health complications. Instead, it’s important to address burnout early, as the
+          longer you ignore it, the more difficult and lengthy the recovery process may become. Learn more about:
+          burnout, depression, cardiovascular issues, and other health problems.
         </p>
       </article>
     </section>
   </section>
 
+  <!-- TAKE BREAKS SECTION -->
   <section class="split-in-2 reverse white-bg">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/playing-table-games.webp" alt="Playing table games" title="2 person playing a table game" />
+        <img src="img/playing-table-games.webp" alt="Two people playing a table game for social engagement"
+          title="Engaging in social games for mental well-being">
         <figcaption>
-          Girl using a computer for remote work, showcasing focus and
-          productivity.
+          Taking a break to engage in social games can help relieve stress and support mental well-being.
         </figcaption>
       </figure>
+
       <article class="text-box">
         <h2>Take regular breaks</h2>
         <p>
-          Taking regular breaks is essential for maintaining both productivity
-          and well-being. Many remote workers tend to sit for long periods
-          without moving, which can negatively affect their physical and
-          mental health. Simple actions like standing, stretching, walking, or
-          changing your environment for a few minutes can relieve tension and
-          improve focus.
+          Taking regular breaks is essential for maintaining both productivity and well-being. Many remote workers tend
+          to sit for long periods without moving, which can negatively affect their physical and mental health. Simple
+          actions like standing, stretching, walking, or changing your environment for a few minutes can relieve tension
+          and improve focus.
         </p>
         <p>
-          One effective way to schedule breaks is through the Pomodoro
-          Technique, which breaks work into intervals. You focus for 25
-          minutes, followed by a 5-minute break. After completing four
-          intervals (or "Pomodoros"), a longer break of 15 to 30 minutes is
-          taken. This structured approach is highly useful for balancing time
-          and energy, promoting productivity, and preventing burnout
-          throughout the workday.
+          One effective way to schedule breaks is through the Pomodoro Technique, which breaks work into intervals. You
+          focus for 25 minutes, followed by a 5-minute break. After completing four intervals (or "Pomodoros"), a longer
+          break of 15 to 30 minutes is taken. This structured approach is highly useful for balancing time and energy,
+          promoting productivity, and preventing burnout throughout the workday.
         </p>
       </article>
     </section>
   </section>
 
+  <!-- BOUNDARIES SECTION -->
   <section class="split-in-2">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/boundaries.webp" alt="" srcset="" />
+        <img src="img/boundaries.webp" alt="Home office setup for work-life balance"
+          title="Home workspace setup for maintaining boundaries">
+        <figcaption>
+          Setting up a dedicated workspace at home supports a balanced work-life routine and prevents burnout.
+        </figcaption>
       </figure>
+
       <article class="text-box">
         <h2>Set clear work-life boundaries</h2>
         <p>
-          When working from home, it's crucial to establish clear boundaries
-          between your work life and personal life. This separation is key in
-          preventing burnout and ensuring you maintain a healthy balance
-          between your professional and personal activities. I recommend
-          setting aside a specific area in your home dedicated solely to work.
-          This helps in keeping your professional and relaxation spaces
-          distinct.
+          When working from home, it's crucial to establish clear boundaries between your work life and personal life.
+          This separation is key in preventing burnout and ensuring you maintain a healthy balance between your
+          professional and personal activities. I recommend setting aside a specific area in your home dedicated solely
+          to work. This helps in keeping your professional and relaxation spaces distinct.
         </p>
         <p>
-          Blending these areas can lead to challenges in mentally
-          disconnecting from work tasks at the end of the day, which can
-          hinder your ability to fully relax and recharge. By clearly defining
-          and respecting these boundaries, you foster a healthier work-life
-          balance, contributing to both personal well-being and professional
-          productivity.
+          Blending these areas can lead to challenges in mentally disconnecting from work tasks at the end of the day,
+          which can hinder your ability to fully relax and recharge. By clearly defining and respecting these
+          boundaries, you foster a healthier work-life balance, contributing to both personal well-being and
+          professional productivity.
         </p>
       </article>
     </section>
   </section>
 
   <section class="split-in-2 reverse white-bg">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/seek-help-picture1.webp" alt="Playing table games" title="2 person playing a table game" />
+        <img src="img/seek-help-picture1.webp" alt="Mental health support concept"
+          title="Mental health support for burnout recovery">
         <figcaption>
-          Girl using a computer for remote work, showcasing focus and
-          productivity.
+          Seeking mental health support is essential for managing stress and overcoming burnout.
         </figcaption>
       </figure>
+
       <article class="text-box">
         <h2>Seek support from mental health professionals</h2>
         <p>
-          Asking for help is really important when dealing with burnout and it
-          is an important part of getting better. Remember this: Talking to a
-          therapist can be really helpful for managing stress and strong
-          emotions. They can give you great advice and help you recognize
-          habits that might lead to burnout, and suggest ways to improve them.
+          Asking for help is really important when dealing with burnout and it is an important part of getting better.
+          Remember this: Talking to a therapist can be really helpful for managing stress and strong emotions. They can
+          give you great advice and help you recognize habits that might lead to burnout, and suggest ways to improve
+          them.
         </p>
         <p>
-          If you can't see a therapist, talking to friends, family, or
-          coworkers can still make a big difference. Just sharing what you're
-          going through with someone who understands can bring relief and
-          support, making everything easier to handle.
+          If you can't see a therapist, talking to friends, family, or coworkers can still make a big difference. Just
+          sharing what you're going through with someone who understands can bring relief and support, making everything
+          easier to handle.
         </p>
       </article>
     </section>
   </section>
 
+
+  <!-- PRACTICE SELFCARE SECTION -->
   <section class="split-in-2">
+    <h2 class="visually-hidden">.</h2>
     <section class="container-split">
+      <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/girl-reading-book.webp" alt="" srcset="" />
+        <img src="img/girl-reading-book.webp" alt="Person reading a book for relaxation"
+          title="Practicing self-care through reading">
+        <figcaption>
+          Taking time for self-care, such as reading, helps to reduce stress and maintain a balanced mind.
+        </figcaption>
       </figure>
+
       <article class="text-box">
         <h2>Practice self-care and mindfulness</h2>
         <p>
-          Practicing self-care and mindfulness is crucial for maintaining
-          mental well-being, especially when managing stress. Self-care can be
-          as simple as ensuring you get enough sleep, eating nutritious meals,
-          or spending time on hobbies that bring joy and relaxation. These
-          small habits help replenish your energy and keep you feeling
+          Practicing self-care and mindfulness is crucial for maintaining mental well-being, especially when managing
+          stress. Self-care can be as simple as ensuring you get enough sleep, eating nutritious meals, or spending time
+          on hobbies that bring joy and relaxation. These small habits help replenish your energy and keep you feeling
           balanced.
         </p>
         <p>
-          Incorporating mindfulness exercises, like meditation, deep
-          breathing, or yoga, can further reduce stress by keeping you focused
-          on the present moment. These practices improve mental clarity and
-          promote a sense of calm. Setting aside time daily to unwind and
-          engage in activities that recharge you physically and mentally is
+          Incorporating mindfulness exercises, like meditation, deep breathing, or yoga, can further reduce stress by
+          keeping you focused on the present moment. These practices improve mental clarity and promote a sense of calm.
+          Setting aside time daily to unwind and engage in activities that recharge you physically and mentally is
           essential for long-term well-being.
         </p>
       </article>
     </section>
   </section>
 
+  <!-- ISOLATION SECTION -->
   <section class="isolation">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-isolation">
+      <h2 class="visually-hidden">.</h2>
       <article class="isolation-text">
         <h2>Dealing with Isolation</h2>
         <p>
@@ -217,8 +218,12 @@
           <strong><em>Here are some practical tips to help combat isolation:</em></strong>
         </p>
       </article>
+
+      <!-- INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
+        <h2 class="visually-hidden">.</h2>
         <article class="block-1">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>1. Schedule Virtual Coffee Chats</strong></p>
           <p>
             Stay socially connected by making regular virtual coffee breaks
@@ -227,7 +232,9 @@
             feelings of loneliness.
           </p>
         </article>
+
         <article class="block-2">
+          <h2 class="visually-hidden">.</h2>
           <p>
             <strong>2. Join Online Communities with Shared Interests</strong>
           </p>
@@ -237,7 +244,9 @@
             spaces to connect, share ideas, and feel part of a community.
           </p>
         </article>
+
         <article class="block-3">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>3. Take Part in Offline Activities</strong></p>
           <p>
             Step away from the screen by participating in local events,
@@ -247,8 +256,12 @@
           </p>
         </article>
       </section>
+
+      <!-- INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
+        <h2 class="visually-hidden">.</h2>
         <article class="block-1">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>4. Work from Co-Working Spaces</strong></p>
           <p>
             Co-working spaces offer an opportunity to work alongside others,
@@ -257,7 +270,9 @@
             where you can meet new people.
           </p>
         </article>
+
         <article class="block-2">
+          <h2 class="visually-hidden">.</h2>
           <p>
             <strong>5. Set Up a Buddy System</strong>
           </p>
@@ -267,7 +282,9 @@
             with can provide support and foster a sense of connection.
           </p>
         </article>
+
         <article class="block-3">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>6. Volunteer in Your Community</strong></p>
           <p>
             Get involved in local volunteering opportunities. Helping others
@@ -279,31 +296,25 @@
     </section>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p>
-        <strong><em>Quick Breaks:</em></strong>
-      </p>
+      <p><strong><em>Quick Breaks:</em></strong></p>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
-        <li>
-          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-        </li>
-        <li>
-          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-        </li>
-        <li>
-          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-        </li>
-        <li>
-          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
-        </li>
+        <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+        <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+        <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
         <li><a href="contact.html" class="navbar-link">Contact</a></li>
       </ul>
     </nav>
     <section class="copyright">
+      <h2 class="visually-hidden">.</h2>
       <figure class="footer-logo">
-        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+          title="Work Balance logo in footer">
+        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
