--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -6,8 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Leandro A Nuñez B">
+  <meta name="description"
+    content="Explore essential tips for creating a comfortable workspace that enhances productivity, mental well-being, and creativity for remote work success.">
+  <meta name="keywords"
+    content="workspace tips, productivity, remote work, comfortable workspace, ergonomics, mental well-being, work-life balance, creativity">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
+  <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/workspace-tips.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
@@ -15,29 +19,18 @@
 
 <body>
   <main>
-    <section class="hero-section">
-      <h2 class="visually-hidden">Hero Section</h2>
-      <!-- Visually hidden heading for accessibility -->
+    <header class="hero-section">
       <section class="hero-content">
-        <!-- Navigation -->
+        <h2 class="visually-hidden">.</h2>
         <nav class="main-navigation">
-          <!-- Logo container updated to header for semantic clarity -->
-          <header class="brand-logo">
+          <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo">
             </a>
-          </header>
-
-          <!-- Hidden checkbox for toggling the menu -->
+          </figure>
           <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
-
-          <!-- Label for the menu button (Hamburger Menu) -->
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon">
-            <i class="fa fa-bars"></i>
-          </label>
-
-          <!-- Navigation links -->
+          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -50,16 +43,16 @@
             <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
-
-        <!-- Hero Message Container -->
-        <section class="hero-message-container">
-          <h1 class="hero-heading">Workspace Tips</h1>
-        </section>
+        <h1 class="hero-heading">Workspace Tips</h1>
       </section>
-    </section>
+    </header>
   </main>
+
+  <!-- COMFORTABLE WORKSPACE SECTION -->
   <section class="section-4">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-section-4">
+      <h2 class="visually-hidden">.</h2>
       <article>
         <h2>The Importance of a Comfortable Workspace</h2>
         <p>
@@ -73,13 +66,18 @@
     </section>
   </section>
 
+  <!-- BENEFITS OF A COMFORTABLE SECTION -->
   <section class="isolation">
+    <h2 class="visually-hidden">.</h2>
     <section class="inner-isolation">
+      <h2 class="visually-hidden">.</h2>
       <article class="isolation-text">
         <h2>Benefits of a Comfortable Workspace</h2>
       </article>
       <section class="isolation-blocks">
+        <h2 class="visually-hidden">.</h2>
         <article class="block-1">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>Physical Health</strong></p>
           <p>
             A comfortable workspace can prevent physical strain and long-term
@@ -90,7 +88,9 @@
             work hours.
           </p>
         </article>
+
         <article class="block-2">
+          <h2 class="visually-hidden">.</h2>
           <p>
             <strong>Improved Focus and Productivity</strong>
           </p>
@@ -103,8 +103,11 @@
           </p>
         </article>
       </section>
+
       <section class="isolation-blocks">
+        <h2 class="visually-hidden">.</h2>
         <article class="block-1">
+          <h2 class="visually-hidden">.</h2>
           <p><strong>Mental Well-being</strong></p>
           <p>
             A comfortable and aesthetically pleasing workspace can reduce
@@ -113,7 +116,9 @@
             atmosphere, which can boost motivation and mental clarity.
           </p>
         </article>
+
         <article class="block-2">
+          <h2 class="visually-hidden">.</h2>
           <p>
             <strong>Increased Creativity</strong>
           </p>
@@ -128,31 +133,25 @@
     </section>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p>
-        <strong><em>Quick Breaks:</em></strong>
-      </p>
+      <p><strong><em>Quick Breaks:</em></strong></p>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
-        <li>
-          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-        </li>
-        <li>
-          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-        </li>
-        <li>
-          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-        </li>
-        <li>
-          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
-        </li>
+        <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+        <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+        <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
         <li><a href="contact.html" class="navbar-link">Contact</a></li>
       </ul>
     </nav>
     <section class="copyright">
+      <h2 class="visually-hidden">.</h2>
       <figure class="footer-logo">
-        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+        <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+          title="Work Balance logo in footer">
+        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
